# stretch_ros

./: .gitignore  .gitmodules  93342000.pcd  README.md  frames.gv  install_noetic.md  mkdocs.yml  output.txt  stretch_demo.repos
docs/: extra.css
stretch_dashboard/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
stretch_dashboard/scripts/: dashboard
stretch_dashboard/src/stretch_dashboard/: stretch_dashboard.py
stretch_description/: CMakeLists.txt  LICENSE.md  README.md  package.xml
stretch_description/batch/: update_description.py
stretch_description/collision/meshes/: base_link.STL  link_arm_l0.STL  link_arm_l1.STL  link_arm_l2.STL  link_arm_l3.STL  link_arm_l4.STL  link_head.STL  link_head_pan.STL  link_head_tilt.STL  link_lift.STL  link_mast.STL  link_wrist_yaw.STL
stretch_description/collision/urdf/: stretch_description_S3_collision.csv  stretch_description_S3_collision.urdf
stretch_description/launch/: display.launch
stretch_description/meshes/: link_aruco_d405.STL  link_aruco_fingertip_left_sg3.STL  link_aruco_fingertip_right_sg3.STL  link_gripper_finger_left_sg3.STL  link_gripper_finger_left_sg3_collision.STL  link_gripper_finger_right_sg3.STL  link_gripper_finger_right_sg3_collision.STL  link_gripper_fingertip_left_sg3.STL  link_gripper_fingertip_left_sg3_collision.STL  link_gripper_fingertip_right_sg3.STL  link_gripper_fingertip_right_sg3_collision.STL  link_gripper_s3_body.STL  link_gripper_s3_body_collision.STL  link_gripper_teleop_camera.STL  link_gripper_teleop_mount.STL  link_head_teleop_camera.STL  link_head_teleop_mount.STL  link_wrist_USB_board_camera.STL  link_wrist_pitch_dw3_collision.STL  link_wrist_roll_dw3_collision.STL  link_wrist_yaw_bottom_dw3.STL  link_wrist_yaw_bottom_dw3_collision.STL  update_meshes.py
stretch_description/meshes/kendrick/: link_gripper.STL
stretch_description/rviz/: stretch.rviz
stretch_description/urdf/: export_urdf.sh  export_urdf_license_template.md  stretch_aruco.xacro  stretch_base_imu.xacro  stretch_d435i.xacro  stretch_description.xacro  stretch_description_SE3_eoa_wrist_dw3_tool_sg3.xacro  stretch_description_dex.xacro  stretch_description_standard.xacro  stretch_dex_wrist.xacro  stretch_dex_wrist_beta.xacro  stretch_dry_erase_marker.xacro  stretch_gripper.xacro  stretch_gripper_with_puller.xacro  stretch_laser_range_finder.xacro  stretch_main.xacro  stretch_mitsksi.xacro  stretch_respeaker.xacro  stretch_teleop_kit.xacro  stretch_tool_sg3.xacro  stretch_wrist_USB_board_camera.xacro  stretch_wrist_dw3.xacro
stretch_description/urdf/cad_to_urdf/: stretch_description.xacro  stretch_description_S2.SLDASM.urdf  stretch_description_S2_DexWrist.SLDASM.urdf  stretch_description_S2_gripper.SLDASM.urdf  stretch_dex_wrist.xacro  stretch_gripper.xacro  stretch_laser_range_finder.xacro
stretch_gazebo/: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  package.xml  stretch_gazebo_plugins.xml
stretch_gazebo/config/: arm.yaml  body.yaml  dex_wrist.yaml  drive_config.yaml  gazebo_ros_control_params.yaml  gripper.yaml  head.yaml  sim.rviz
stretch_gazebo/include/stretch_gazebo/: stretch_hardware_gazebo.h  stretch_hardware_gazebo_plugin.h
stretch_gazebo/launch/: gazebo.launch  random_objects.launch  random_objects_with_upright_camera_view.launch  teleop_joy.launch  teleop_keyboard.launch  upright_camera_view.launch
stretch_gazebo/maps/: willowgarage.yaml
stretch_gazebo/nodes/: keyboard.py  keyboard_teleop_gazebo
stretch_gazebo/scripts/: publish_ground_truth_odom.py  unpause_after_wait
stretch_gazebo/src/: stretch_hardware_gazebo.cpp  stretch_hardware_gazebo_plugin.cpp
stretch_gazebo/urdf/: stretch_aruco.xacro  stretch_gazebo.urdf.xacro  stretch_gazebo_dex_wrist.urdf.xacro  stretch_gazebo_standard_gripper.urdf.xacro  stretch_teleop_kit_dex_wrist.xacro
stretch_gazebo/worlds/: random_objects.world  willowgarageoccupied.world
stretch_navigation/: CMakeLists.txt  LICENSE.md  README.md  package.xml
stretch_navigation/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  common_costmap_params.yaml  global_costmap_params_nomap.yaml  global_costmap_params_withmap.yaml  local_costmap_params.yaml
stretch_navigation/launch/: mapping.launch  mapping_gazebo.launch  navigation.launch  navigation_3d.launch  navigation_gazebo.launch  rtab.launch  rtab_generic.launch  rtab_robot.launch  rtabmapviz.launch  rviz_rtab.launch  teleop.launch
stretch_navigation/launch/navigation/: amcl.launch  map_server.launch  move_base.launch  octomap_server.launch
stretch_navigation/launch/rtab/: move_base.launch  rtab.launch
stretch_navigation/nodes/: move_base_pose.py
stretch_navigation/resources/config/: amcl.yaml
stretch_navigation/rviz/: mapping.rviz  navigation.rviz  octomap_mapper.rviz  rtab_mapping.rviz  rtab_navigation.rviz
stretch_octomap/: CMakeLists.txt  README.md  package.xml
stretch_octomap/launch/: mapping.launch  mapping_gazebo.launch  octomap_mapper.launch
stretch_octomap/rviz/: octomap.rviz
stretch_plan_client/: CMakeLists.txt  README.md  package.xml
stretch_plan_client/launch/: demo.launch.py
stretch_plan_client/src/: stretch_plan_client.cpp
stretch_rtabmap/: CMakeLists.txt  LICENSE.md  README.md  package.xml
stretch_rtabmap/config/: amcl.yaml  costmap_height.yaml  stretch_gazebo.yaml
stretch_rtabmap/config/2d/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml
stretch_rtabmap/config/2d_unknown/: base_local_planner_params.yaml  costmap_common_params.yaml  global_planner_params.yaml
stretch_rtabmap/config/3d/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
stretch_rtabmap/config/3d_unknown/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
stretch_rtabmap/launch/: move_base.launch  robot.launch  rtab.launch  rtab_gazebo.launch  rtabmapviz.launch  rviz_rtab.launch  start_rtab.launch
stretch_rtabmap/rviz/: rtab_navigation.rviz
(+509 files in other folders)
