<?xml version="1.0"?>
<package format="2">
  <name>stretch_dashboard</name>
  <version>0.2.0</version>
  <description>
      A Python GUI plugin for displaying a dashboard that displays and interacts with the Stretch robot.
  </description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_robot_dashboard</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
