<?xml version="1.0"?>
<package format="3">
  <name>stretch_description</name>
  <version>0.2.0</version>
  <description>The stretch_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="support@hello-robot.com">Hello Robot Inc.</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>CC BY-NC-SA 4.0 (Attribution-NonCommercial-ShareAlike 4.0 International)</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/stretch_description</url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>realsense2_description</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
