<?xml version="1.0"?>
<package format="2">
  <name>stretch_navigation</name>
  <version>0.2.0</version>
  <description>Standard ROS navigation package using move_base and amcl.</description>
  <maintainer email="support@hello-robot.com">Hello Robot Inc.</maintainer>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/hello-robot/stretch_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>stretch_core</exec_depend>
</package>
