<?xml version="1.0"?>
<package format="2">
  <name>stretch_rtabmap</name>
  <version>0.0.0</version>
  <description>The stretch_rtabmap package</description>
  <maintainer email="support@hello-robot.com">Hello Robot Inc.</maintainer>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/hello-robot/stretch_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
</package>
